# t8dev

./: .gitignore  README.md  SETUP.md  Test  project-setup.bash  pyproject.toml  requirements.txt  setup.cfg  t8setup.bash
doc/: CHANGELOG.md  TODO.md  release.md  setup.md
psrc/t8dev/: path.py  run.py
psrc/t8dev/cli/: t8dev.py  tmc6800.py  wozmon_deposit.py
psrc/t8dev/cli/t8dev/: __init__.py  build.py  emulator.pt  emulator.py  main.py  pytest.py  romimage.pt  romimage.py  toolset.py  util.py
psrc/t8dev/toolset/: __init__.py  cscp.py  setup.py
psrc/testmc/: tmc.pt  tmc.py
psrc/testmc/generic/: mach_trace.pt  machine.pt  machine.py  registers.pt  registers.py
psrc/testmc/i8080/: machine.pt  machine.py  nativetest.pt  opcodes.py  opimpl.pt  opimpl.py
psrc/testmc/i8080/bios/: cpmcode.i80
psrc/testmc/i8080/programs/: 8080mac.i80  README.md
psrc/testmc/i8080/tmc/: bios.i80  bioscode.pt
psrc/testmc/mc6800/tmc/: bioscode.asm
psrc/testmc/mos65/: machine.pt
psrc/testmc/mos65/tmc/: bios.a65
psrc/testmc/pytest/: fixtures.py
pylib/: README.md  pytest_pt.py
pylib/cmtconv/: Test
pylib/t8dev/: path.pt  path.py
pylib/t8dev/cli/: t8dev.py
pylib/t8dev/toolset/: __init__.py  bm2.py  setup.py
pylib/testmc/: conftest.py
pylib/testmc/generic/: registers.pt  registers.py
pylib/testmc/i8080/: machine.pt  machine.py  opcodes.py
pylib/testmc/tool/: asl.pt  asxxxx.pt
r8format/: Functest  README.md  pyproject.toml
r8format/doc/: CHANGELOG.md  bastok.md
r8format/psrc/cmtconv/: Test
r8format/src/bastok/cli/: basdump.py  detok.py
r8format/src/binary/: memimage.py
r8format/src/binary/tool/: asl.pt  (+5 more)
r8format/src/cmtconv/: Test
src/: README.md  bastok  binary  cmtconv  t8dev  testmc
t8dev/: README.md  pyproject.toml  setup.cfg  t8setup.bash
t8dev/doc/: CHANGELOG.md  t8t.md
t8dev/psrc/t8dev/cli/: p2a2bin.py
t8dev/psrc/t8dev/cli/t8dev/: asl.py
t8dev/psrc/t8dev/cli/t8dev/emulator/: cscp.py  runcpm.py
t8dev/src/t8dev/: run.py
t8dev/src/t8dev/cli/: t8t.pt  t8t.py
t8dev/src/t8dev/cli/t8dev/: asl.py  asx.py  build.py  pytest.py  toolset.py  util.py
t8dev/src/t8dev/cli/t8dev/emulator/: cscp.py
t8dev/src/t8dev/toolset/: __init__.py  asl.py  disx.py  dos33fsprogs.py  zesarux.py
(+9 files in other folders)
