[project]
name = 't8dev'
description = 'Tools for 8-bit cross-development '
version = '0.0.0'
dependencies = []
authors = [
    { name = 'Curt J. Sampson', email = 'cjs@cynic.net' },
]

[project.scripts]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['pylib/']

[tool.pytest.ini_options]
testpaths = ['pylib/']
