[project]
name = 't8dev'
version = '0.0.1.dev2'
description = 'Tools for 8-bit cross-development '
requires-python = '>=3.6'
dependencies = ['r8format']
authors = [
    { name = 'Curt J. Sampson', email = 'cjs@cynic.net' },
]

[project.optional-dependencies]
extsim  = ['py65',]                     # external CPU simulators
toolset = ['requests',]                 # toolset installation capability
pytest  = ['pytest',]                   # user unit test framework
all     = ['py65',  'requests', 'pytest']

[project.scripts]
ascii2a2t       = 't8dev.cli.ascii2a2t:main'
mb6885          = 't8dev.cli.mb6885:main'
p2a2bin         = 't8dev.cli.p2a2bin:main'
t8dev           = 't8dev.cli.t8dev:main'
tmc6800         = 't8dev.cli.tmc6800:main'
wozmon-deposit  = 't8dev.cli.wozmon_deposit:main'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['psrc']

[tool.pytest.ini_options]
testpaths = ['psrc']
