#   This is required solely because `setuptools` has no way to specify
#   inclusion of non-Python scripts in `pyproject.toml`.
#
#   WARNING: This does *NOT* use the source tree versions of these files
#   when this package is installed as editable (`pip install -e`); it
#   simply copies the scripts as they are at the time of install. If you
#   update the source version of a script, you will need to re-install this
#   package or manually copy the file to see the updates in the virtualenv
#   bin/ directory.
#

[build]
build_base = .build/setuptools      # instead of `build/`

[options]
scripts =
    bin/a1term
    bin/a2printer
    bin/cmpasl
    bin/charrom-vis
    bin/t2a2dsk
    bin/vlst
    bin/z80dasm-clean
